--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -9,14 +9,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <script src="https://cdn3.devexpress.com/jslib/17.1.7/js/dx.all.js"></script>
-  <script src="/js/need.js"></script>
+  <script src="/js/listing.js"></script>
 </head>
 <body>
     <div class="container-fluid" data-bind="foreach: listing">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <h3 data-bind="text:title"></h3>
         <p data-bind="text:message"></p>
-        <imgage>
+        <img data-bind="attr:{src: imagePath}"  height="42" width="42">
       </div>
     </div>
 </body>
