Minor gui fixes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h1 class="text-center hero-bloc-text tc-silver ">
-					Help for every home who needs it.
+					Help for every person who needs it.
 				</h1>
 				<h3 class="text-center mg-lg hero-bloc-text-sub tc-silver ">
 					We believe that the Church can make a difference.
