--- a/src/main/resources/templates/listings.html
+++ b/src/main/resources/templates/listings.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="img/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -15,14 +15,13 @@
     
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
+		  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+	    <script src="https://cdn3.devexpress.com/jslib/17.1.7/js/dx.all.js"></script>
 	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 	<script src="./js/lazysizes.min.js" defer></script>
+  	<script src="/js/listing.js"></script>
     <title>Listings</title>
-
-    
-<!-- Google Analytics -->
- 
-<!-- Google Analytics END -->
     
 </head>
 <body>
@@ -40,7 +39,7 @@
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1">
-				<ul class="site-navigation nav navbar-nav animated shake-hvr">
+				<ul class="site-navigation nav navbar-nav shake-hvr animated">
 					<li>
 						<a href="log-in.html">Log-In</a>
 					</li>
@@ -60,41 +59,406 @@
 </div>
 <!-- bloc-0 END -->
 
-<!-- Bloc Group -->
-<div class='bloc-group'>
-
 <!-- bloc-6 -->
-<div class="bloc bloc-tile-2 bgc-davys-grey d-bloc" id="bloc-6">
-	<div class="container bloc-lg">
-		<div class="row " id="text-w-small">
-			<div class="col-sm-12">
-				<span class="empty-column"></span>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-6 END -->
-
-<!-- bloc-7 -->
-<div class="bloc bgc-lavender-gray bloc-tile-2 l-bloc" id="bloc-7">
+<div class="bloc none bgc-dark-jungle-green d-bloc" id="bloc-6" style="background-color:#000;">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
+				<h2 class="text-center mg-md">
+					Needs near you
+				</h2>
+				<div class="btn-group btn-dropdown pull-right">
+					<a href="#" class="btn dropdown-toggle  btn-d  btn-sm" data-toggle="dropdown" aria-expanded="false">Category<span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a href="index.html" class="a-btn a-block">Baby</a>
+						</li>
+						<li>
+							<a href="index.html" class="a-btn a-block">Adults</a>
+						</li>
+					</ul>
+				</div>
+				<div class="btn-group btn-dropdown pull-right">
+					<a href="#" class="btn dropdown-toggle  btn-d  btn-sm" data-toggle="dropdown" aria-expanded="true">Region<span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a href="index.html" class="a-btn a-block">Local</a>
+						</li>
+						<li>
+							<a href="index.html" class="a-btn a-block">National</a>
+						</li>
+					</ul>
+				</div>
+				<div class="btn-group btn-dropdown pull-right">
+					<a href="#" class="btn dropdown-toggle  btn-d  btn-sm" data-toggle="dropdown" aria-expanded="true">Sort by<span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a href="index.html" class="a-btn a-block">Date</a>
+						</li>
+						<li>
+							<a href="index.html" class="a-btn a-block">Urgency</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
+		<div class="row voffset">
+			<div class="col-sm-2">
+				<a href="listing_details.html"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Small Sofa
+				</h3>
+				<p>
+					Jess just got a foster child and is in need of an extra sofa for them to have some quality family time.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="listing_details2.html"><img src="img/lazyload-ph.png" data-src="img/Household%20help.jpg" class="img-responsive  lazyload" /></a>
+				<h3 class="mg-md">
+					Help with Ironing
+				</h3>
+				<p>
+					With the new kids being fostered, Jamie appreciate an extra hand to help with ironing.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					A friend to talk
+				</h3>
+				<p>
+					A lot is happeing with my life and would love to speak to someone.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Football
+				</h3>
+				<p>
+					Can anyone donate a football to our son. He would love it!
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Clothes needed
+				</h3>
+				<p>
+					I have an interview and apreciate some good clothes to borrow, Men 42, 36.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Text Books&nbsp;
+				</h3>
+				<p>
+					Year 6 textbooks needed for my daughter.&nbsp;
+				</p>
+			</div>
+		</div>
+		<div class="row voffset" data-bind="foreach: listing">
+	        <div class="col-sm-2">
+				<img data-bind="attr:{src: imagePath}"   class="img-responsive lazyload">
+				<h3 class="mg-md" data-bind="text:title">
+				</h3>
+				<p>
+					<span data-bind="text: message"></span>
+				</p>
+	        </div>
+		</div>
+<!-- 		
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Any laptop
+				</h3>
+				<p>
+					Our son&rsquo;s laptop was stolen and has tp do his project. Can anyone donate any laptop?
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Music classes
+				</h3>
+				<p>
+					Our Daughter would like to learn the guitar. Any one who can teach her?
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Baby.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Baby Clothes
+				</h3>
+				<p>
+					JS is 2 years old and she would be happy to have any used clothes.&nbsp;
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/01.%20Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/01.%20Clothes.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Baby products
+				</h3>
+				<p>
+					Any baby products for our infant son would be appreciated.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Help with cleaning
+				</h3>
+				<p>
+					Due to the recent hospitalisation, I would be thankful if anyone can help with a few chores
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					MS Office
+				</h3>
+				<p>
+					Any old MS office software that can be donated?
+				</p>
+			</div>
+		</div>
+		<div class="row voffset">
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Furniture.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Small Sofa
+				</h3>
+				<p>
+					Jess just got a foster child and is in need of an extra sofa for them to have some quality family time.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Household%20help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Household%20help.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Help with Ironing
+				</h3>
+				<p>
+					With the new kids being fostered, Jamie appreciate an extra hand to help with ironing.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					A friend to talk
+				</h3>
+				<p>
+					A lot is happeing with my life and would love to speak to someone.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Football
+				</h3>
+				<p>
+					Can anyone donate a football to our son. He would love it!
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Clothes needed
+				</h3>
+				<p>
+					I have an interview and apreciate some good clothes to borrow, Men 42, 36.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Text Books&nbsp;
+				</h3>
+				<p>
+					Year 6 textbooks needed for my daughter.&nbsp;
+				</p>
+			</div>
+		</div>
+		<div class="row voffset">
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Any laptop
+				</h3>
+				<p>
+					Our son&rsquo;s laptop was stolen and has tp do his project. Can anyone donate any laptop?
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Music classes
+				</h3>
+				<p>
+					Our Daughter would like to learn the guitar. Any one who can teach her?
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Baby.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Baby Clothes
+				</h3>
+				<p>
+					JS is 2 years old and she would be happy to have any used clothes.&nbsp;
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/01.%20Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/01.%20Clothes.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Baby products
+				</h3>
+				<p>
+					Any baby products for our infant son would be appreciated.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Help with cleaning
+				</h3>
+				<p>
+					Due to the recent hospitalisation, I would be thankful if anyone can help with a few chores
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					MS Office
+				</h3>
+				<p>
+					Any old MS office software that can be donated?
+				</p>
+			</div>
+		</div>
+		<div class="row voffset">
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Furniture.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Small Sofa
+				</h3>
+				<p>
+					Jess just got a foster child and is in need of an extra sofa for them to have some quality family time.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Household%20help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Household%20help.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Help with Ironing
+				</h3>
+				<p>
+					With the new kids being fostered, Jamie appreciate an extra hand to help with ironing.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					A friend to talk
+				</h3>
+				<p>
+					A lot is happeing with my life and would love to speak to someone.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Football
+				</h3>
+				<p>
+					Can anyone donate a football to our son. He would love it!
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Clothes needed
+				</h3>
+				<p>
+					I have an interview and apreciate some good clothes to borrow, Men 42, 36.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Text Books&nbsp;
+				</h3>
+				<p>
+					Year 6 textbooks needed for my daughter.&nbsp;
+				</p>
+			</div>
+		</div>
+		<div class="row voffset">
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Any laptop
+				</h3>
+				<p>
+					Our son&rsquo;s laptop was stolen and has tp do his project. Can anyone donate any laptop?
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Music classes
+				</h3>
+				<p>
+					Our Daughter would like to learn the guitar. Any one who can teach her?
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/Baby.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Baby Clothes
+				</h3>
+				<p>
+					JS is 2 years old and she would be happy to have any used clothes.&nbsp;
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<a href="#" data-lightbox="img/01.%20Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/01.%20Clothes.jpg" class="img-responsive lazyload" /></a>
+				<h3 class="mg-md">
+					Baby products
+				</h3>
+				<p>
+					Any baby products for our infant son would be appreciated.
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					Help with cleaning
+				</h3>
+				<p>
+					Due to the recent hospitalisation, I would be thankful if anyone can help with a few chores
+				</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" />
+				<h3 class="mg-md">
+					MS Office
+				</h3>
+				<p>
+					Any old MS office software that can be donated?
+				</p>
+			</div>
+		</div> -->
 	</div>
 </div>
-<!-- bloc-7 END -->
-</div>
-<!-- Bloc Group END -->
+<!-- bloc-6 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
 
-<!-- Footer - bloc-8 -->
-<div class="bloc bgc-davys-grey bloc-bg-texture texture-fabric d-bloc" id="bloc-8">
+<!-- Footer - bloc-7 -->
+<div class="bloc bgc-davys-grey bloc-bg-texture texture-fabric d-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-3">
@@ -120,7 +484,7 @@
 		</div>
 	</div>
 </div>
-<!-- Footer - bloc-8 END -->
+<!-- Footer - bloc-7 END -->
 
 </div>
 <!-- Main container END -->
