--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -5,10 +5,10 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="img/png" href="favicon.png">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -73,7 +73,7 @@
 		</div>
 		<div class="row voffset">
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Baby.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html" data-lightbox="img/Baby.jpg"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Baby &amp; Toddlers
 				</h3>
@@ -82,7 +82,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Books.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html"  data-lightbox="img/Books.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Books, DVDs &amp; Games
 				</h3>
@@ -91,7 +91,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html" data-lightbox="img/Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Clothes &amp; Footware
 				</h3>
@@ -100,7 +100,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Computers
 				</h3>
@@ -111,7 +111,7 @@
 		</div>
 		<div class="row voffset">
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Furniture.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html" data-lightbox="img/Furniture.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Furniture
 				</h3>
@@ -120,7 +120,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Musical instruments
 				</h3>
@@ -129,7 +129,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Sport goods
 				</h3>
@@ -138,7 +138,7 @@
 				</p>
 			</div>
 			<div class="col-sm-3">
-				<a href="#" data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
+				<a href="listings.html"  data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
 				<h3 class="mg-md">
 					Household Help
 				</h3>
