--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -90,7 +90,7 @@
 						<br>
 					</p>
 					<div class="text-center">
-						<a href="index.html" class="btn btn-lg btn-rich-electric-blue">Log me in</a>
+						<a href="categories.html" class="btn btn-lg btn-rich-electric-blue">Log me in</a>
 					</div>
 					<h3 class="mg-md">
 						<br>
