--- a/src/main/resources/templates/terms.html
+++ b/src/main/resources/templates/terms.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="shortcut icon" type="image/png" href="favicon.png">
       <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-      <link rel="stylesheet" type="text/css" href="./style.css">
+      <link rel="stylesheet" type="text/css" href="./css/style.css">
       <link rel="stylesheet" type="text/css" href="./css/animate.min.css">
       <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="./css/feather.min.css">
