fix error on details age

--- a/src/main/resources/templates/listing_details.html
+++ b/src/main/resources/templates/listing_details.html
@@ -33,10 +33,10 @@
                   <div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="../img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way.</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
                   <div class="collapse navbar-collapse navbar-1">
                      <ul class="site-navigation nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="listings.html">Show Listings</a></li>
-                        <li><a href="needs.html">I Have a Need</a></li>
-                        <li><a href="log-out.html">Log Out</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../listings.html">Show Listings</a></li>
+                        <li><a href="../needs.html">I Have a Need</a></li>
+                        <li><a href="../log-out.html">Log Out</a></li>
                      </ul>
                   </div>
                </nav>
