Final of the night

--- a/src/main/resources/templates/listing_details.html
+++ b/src/main/resources/templates/listing_details.html
@@ -55,7 +55,7 @@
                   <div class="col-sm-8">
                      <h2 class="mg-md"  data-bind="text:item.title"></h2>
                      <p class="text-left" >  <span data-bind="text: item.message"></span></p>
-                     <a href="messenger.html" class="btn btn-sm btn-rich-electric-blue">I can meet your need</a><a href="https://twitter.com/share" class="twitter-share-button pull-right" data-url="http://helpisontheway.co.uk/Listings" data-text="Can you help?">Tweet</a>
+                     <a href="../messenger.html" class="btn btn-sm btn-rich-electric-blue">I can meet your need</a><a href="https://twitter.com/share" class="twitter-share-button pull-right" data-url="http://helpisontheway.co.uk/Listings" data-text="Can you help?">Tweet</a>
                   </div>
                </div>
             </div>
