Final html clean

--- a/src/main/resources/templates/listings.html
+++ b/src/main/resources/templates/listings.html
@@ -19,7 +19,7 @@
    <script src="./js/blocs.min.js"></script>
    <script src="./js/jquery.touchSwipe.min.js" defer></script>
    <script src="./js/lazysizes.min.js" defer></script>
-   <script src="/js/listing.js"></script>
+   <script src="./js/listing.js"></script>
       <title>Listings</title>
       <!-- Google Analytics --> <!-- Google Analytics END --> 
    </head>
@@ -71,71 +71,7 @@
                         </ul>
                      </div>
                   </div>
-               </div>
-               <div class="row voffset">
-                  <div class="col-sm-2">
-                     <a href="listing_details.html"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Small Sofa</h3>
-                     <p>Jess just got a foster child and is in need of an extra sofa for them to have some quality family time.</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <a href="index.html"><img src="img/lazyload-ph.png" data-src="img/Household%20help.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Help with Ironing</h3>
-                     <p>With the new kids being fostered, Jamie appreciate an extra hand to help with ironing.</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <a href="#" data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">A friend to talk</h3>
-                     <p>A lot is happeing with my life and would love to speak to someone.</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <a href="#" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Football</h3>
-                     <p>Can anyone donate a football to our son. He would love it!</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive lazyload" />
-                     <h3 class="mg-md">Clothes needed</h3>
-                     <p>I have an interview and apreciate some good clothes to borrow, Men 42, 36.</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive lazyload" />
-                     <h3 class="mg-md">Text Books&nbsp;</h3>
-                     <p>Year 6 textbooks needed for my daughter.&nbsp;</p>
-                  </div>
-               </div>
-               <div class="row voffset">
-                  <div class="col-sm-2">
-                     <a href="#" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Any laptop</h3>
-                     <p>Our son&rsquo;s laptop was stolen and has tp do his project. Can anyone donate any laptop?</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <a href="#" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Music classes</h3>
-                     <p>Our Daughter would like to learn the guitar. Any one who can teach her?</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <a href="#" data-lightbox="img/Baby.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Baby Clothes</h3>
-                     <p>JS is 2 years old and she would be happy to have any used clothes.&nbsp;</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <a href="#" data-lightbox="img/01.%20Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/01.%20Clothes.jpg" class="img-responsive lazyload" /></a>
-                     <h3 class="mg-md">Baby products</h3>
-                     <p>Any baby products for our infant son would be appreciated.</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive lazyload" />
-                     <h3 class="mg-md">Help with cleaning</h3>
-                     <p>Due to the recent hospitalisation, I would be thankful if anyone can help with a few chores</p>
-                  </div>
-                  <div class="col-sm-2">
-                     <img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive lazyload" />
-                     <h3 class="mg-md">MS Office</h3>
-                     <p>Any old MS office software that can be donated?</p>
-                  </div>
-               </div>
+               </div>              
                <div class="row voffset" data-bind="foreach: listing">
                   <div class="col-sm-2">
                      <a data-bind="attr: { href: urlPath }"><img data-bind="attr:{src: imagePath}"   class="img-responsive lazyload"></a>
