--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -52,7 +52,7 @@
                      <p class="blocs-team-details">An avid follower of the kingdom and a lover of the code. <br>Founder of HelpIsOnTheWay.co.uk <br>UX &amp; UI</p>
                      <a href="https://twitter.com/share" class="twitter-share-button" data-url="helpisontheway.co.uk" data-text="@IamSamS #HelpIsOnTheWay ">Tweet</a><br><a href="mailto:samuel.spurgeon@yahoo.com" target="_blank"><span class="feather-icon icon-mail icon-sm pull-left"></span></a>
                   </div>
-                  <div class="col-sm-2"><img src="img/lazyload-ph.png" data-src="img/Upload.png" class="img-circle img-responsive center-block blocs-team-avatar lazyload" /></div>
+                  <div class="col-sm-2"><img src="img/lazyload-ph.png" data-src="img/david.jpg" class="img-circle img-responsive center-block blocs-team-avatar lazyload" /></div>
                   <div class="col-sm-4">
                      <h3 class="blocs-team-header">David Mark</h3>
                      <p class="blocs-team-details">The man under the bonnet.&nbsp; <br>Web-backend Developer <br> <br><br></p>
