--- a/src/main/resources/templates/listings.html
+++ b/src/main/resources/templates/listings.html
@@ -76,8 +76,8 @@
                   <div class="col-sm-3">
                      <a data-bind="attr: { href: urlPath }"><img data-bind="attr:{src: imagePath}" class="img-responsive lazyload"></a>
                      
-                     <h3 class="mg-md" data-bind="text:title"></h3>
-                     <p>
+                     <h3 class="mg-md"  style="height: 26px;" data-bind="text:title"></h3>
+                     <p style="height: 120px;">
                         <span data-bind="text: message"></span>
                      </p>
                   </div>
