Fix listings rendering

--- a/src/main/resources/templates/listings.html
+++ b/src/main/resources/templates/listings.html
@@ -71,17 +71,19 @@
                         </ul>
                      </div>
                   </div>
-               </div>              
-               <div class="row voffset" data-bind="foreach: listing">
-                  <div class="col-sm-3">
-                     <a data-bind="attr: { href: urlPath }"><img data-bind="attr:{src: imagePath}" class="img-responsive lazyload"></a>
-                     
-                     <h3 class="mg-md"  style="height: 26px;" data-bind="text:title"></h3>
-                     <p style="height: 120px;">
-                        <span data-bind="text: message"></span>
-                     </p>
+               </div> 
+               <div data-bind="foreach: listing">             
+                  <div class="row voffset" data-bind="foreach: $data">
+                     <div class="col-sm-3">
+                        <a data-bind="attr: { href: urlPath }"><img data-bind="attr:{src: imagePath}" class="img-responsive lazyload"></a>
+                        
+                        <h3 class="mg-md"  style="height: 26px;" data-bind="text:title"></h3>
+                        <p style="height: 120px;">
+                           <span data-bind="text: message"></span>
+                        </p>
+                     </div>
                   </div>
-               </div>
+               </div> 
             </div>
          </div>
 
