Dropdown remain on page

--- a/src/main/resources/templates/needs.html
+++ b/src/main/resources/templates/needs.html
@@ -82,8 +82,8 @@
                            <div class="btn-group btn-dropdown">
                               <a href="#" class="btn dropdown-togglebtn-lg btn-block btn-davys-grey" data-toggle="dropdown" aria-expanded="true">Select a Category<span class="caret"></span></a>
                               <ul class="dropdown-menu" role="menu">
-                                 <li><a href="index.html" class="a-btn a-block ltc-davys-grey">Clothes</a></li>
-                                 <li><a href="index.html" class="a-btn a-block ltc-davys-grey">Furniture</a></li>
+                                 <li><a href="#" class="a-btn a-block ltc-davys-grey">Clothes</a></li>
+                                 <li><a href="#" class="a-btn a-block ltc-davys-grey">Furniture</a></li>
                               </ul>
                            </div>
                         </div>  			
