Small style change

--- a/src/main/resources/templates/listing_details.html
+++ b/src/main/resources/templates/listing_details.html
@@ -55,7 +55,7 @@
                   <div class="col-sm-8">
                      <h2 class="mg-md"  data-bind="text:item.title"></h2>
                      <p class="text-left" style="height: 180px;">  <span data-bind="text: item.message"></span></p>
-                     <a href="../messenger.html" class="btn btn-lg btn-block btn-rich-electric-blue">I can meet your need</a>
+                     <a href="../messenger.html" class="btn btn-lg btn-rich-electric-blue">I can meet your need</a>
                   </div>
                </div>
             </div>
